Fix: bugs with json data handler and charts in dashbords